Expand content on fisher decision-making factors
Added sections on resource constraints, time horizons, alternative information sources, and technology access to index.html.

--- a/index.html
+++ b/index.html
@@ -233,6 +233,99 @@
     Fishers may copy behavior or confidence from their social contacts.
   </p>
 
+    <h4>3.6 Resource Constraints</h4>
+  <p>
+    Represents a fisher's ability to weather a bad season or absorb losses.
+  </p>
+  <p>Resource-constrained fishers:</p>
+  <ul>
+    <li>Are more vulnerable to single negative outcomes</li>
+    <li>May be more risk-averse about trying new approaches</li>
+    <li>Have less capacity to experiment or learn through trial and error</li>
+    <li>May face higher stakes in adoption decisions</li>
+  </ul>
+  <p>Resource levels may also affect:</p>
+  <ul>
+    <li>Persistence after setbacks</li>
+    <li>Willingness to invest time in learning the app</li>
+    <li>Ability to access complementary resources (fuel, equipment) that make the app more useful</li>
+  </ul>
+
+  <h4>3.7 Time Horizons</h4>
+  <p>
+    Represents how far into the future a fisher weighs outcomes when making decisions.
+  </p>
+  <p>Variation may reflect:</p>
+  <ul>
+    <li>Age (younger fishers may have longer time horizons)</li>
+    <li>Health status</li>
+    <li>Family obligations and succession planning</li>
+    <li>Alternative livelihood options</li>
+  </ul>
+  <p>Fishers with longer time horizons:</p>
+  <ul>
+    <li>May be more willing to tolerate short-term uncertainty for long-term gains</li>
+    <li>May invest more in learning and skill-building</li>
+    <li>May be less deterred by initial setbacks</li>
+  </ul>
+  <p>
+    Time horizons interact with environmental variability—in highly volatile
+    contexts, even patient fishers may discount the future more heavily.
+  </p>
+
+  <h4>3.8 Alternative Information Sources</h4>
+  <p>
+    Represents access to and trust in other sources of knowledge.
+  </p>
+  <p>Sources may include:</p>
+  <ul>
+    <li>Traditional ecological knowledge passed down through generations</li>
+    <li>Personal fishing experience</li>
+    <li>Observations of environmental cues (weather patterns, water conditions, bird behavior)</li>
+    <li>Informal networks and elder fishers</li>
+  </ul>
+  <p>Fishers with strong alternative information sources:</p>
+  <ul>
+    <li>May be less dependent on the app</li>
+    <li>May use the app selectively or as a supplement rather than replacement</li>
+    <li>May evaluate the app's advice against traditional knowledge</li>
+    <li>May be slower to adopt if they perceive conflict between app recommendations and traditional practices</li>
+  </ul>
+  <p>
+    The relationship between traditional knowledge and app-based guidance may be:
+  </p>
+  <ul>
+    <li>Complementary (app confirms or refines existing knowledge)</li>
+    <li>Contradictory (app suggests different approaches)</li>
+    <li>Context-dependent (each works better in different conditions)</li>
+  </ul>
+
+  <h4>3.9 Technology Access and Literacy</h4>
+  <p>
+    Represents familiarity with smartphones and digital tools, as well as practical access.
+  </p>
+  <p>Variation includes:</p>
+  <ul>
+    <li>Prior experience with mobile phones or apps</li>
+    <li>Literacy and numeracy levels</li>
+    <li>Language compatibility</li>
+    <li>Physical access to devices (ownership vs. sharing)</li>
+    <li>Network connectivity and data costs</li>
+  </ul>
+  <p>Fishers with lower technology literacy or access:</p>
+  <ul>
+    <li>Face higher barriers to initial adoption</li>
+    <li>May require more support and training</li>
+    <li>May use the app less effectively even when adopted</li>
+    <li>May rely more heavily on intermediaries or facilitators</li>
+    <li>May experience the app differently (e.g., through voice vs. text interface)</li>
+  </ul>
+  <p>
+    Technology constraints can create persistent inequality in adoption and
+    benefits, even when the app is freely available.
+  </p>
+
+
   <h3>4. Environment</h3>
   <p>
     Each season has a level of environmental variability.
